| Bug #12124 | ndb_mgm -e "# stop" does not allow stopping ndb_mgmd processes on other systems | ||
|---|---|---|---|
| Submitted: | 22 Jul 2005 20:58 | Modified: | 20 Jan 2006 14:50 |
| Reporter: | Jonathan Miller | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.0, 5.1 | OS: | Linux (Linux) |
| Assigned to: | Stewart Smith | Target Version: | |
[22 Jul 2005 20:58]
Jonathan Miller
[24 Jul 2005 3:10]
Stewart Smith
My proposed way to solve WL2703 (restart for ndb_mgmd) should allow for this bug to be fixed easily.
[14 Sep 2005 23:13]
Jonathan Miller
Just a reminder that I am still hitting this issue.
[16 Jan 2006 13:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1137
[19 Jan 2006 10:32]
Stewart Smith
pushed to 5.0.19 many unmerged csets to 5.1, won't attempt merging yet
[20 Jan 2006 14:50]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.0.19 changelog. Closed.
