BUG#12124 ndb_mgm -e "# stop" does not allow stopping ndb_mgmd processes on other systems WL#2703 restart for ndb_mgmd

Solving two problems with one stone.

Allows the stopping and restarting of mgm nodes other than the one the mgmclient
is connected to.